[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sounds/sfx/PowerUp_Activated_Ghost-sharedassets0.assets.split0-60.wav" type="AudioStream" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/jet2holifay-removebg-preview.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37.5, 38 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5.5, 6 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, -1 )
scale = Vector2( 0.489103, 0.3147 )
texture = ExtResource( 3 )

[node name="Move" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Invinciblility" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="InvinciblilityGet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="MultiBullet" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Move" to="." method="_on_Move_timeout"]
[connection signal="timeout" from="Invinciblility" to="." method="_on_Invinciblility_timeout"]
[connection signal="timeout" from="MultiBullet" to="." method="_on_MultiBullet_timeout"]
